[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lunes-cms"
description = "Content Management System for the Lunes App"
version = "2026.6.1"
authors = [{name = "Tür an Tür – Digitalfabrik gGmbH", email = "tech@integreat-app.de"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "lunes",
    "cms",
    "django",
    "e-learning",
    "vocabulary",
    "trainer",
    "vocabulary-trainer",
    "visual-vocabulary-trainer",
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE.md", "SECURITY.md"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Natural Language :: English",
    "Natural Language :: German",
]
dependencies = [
	"django==5.2.14",
	"django-import-export==4.4.1",
	"django-jazzmin==3.0.4",
	"django-mptt==0.18.0",
	"django-qr-code==4.2.0",
	"djangorestframework==3.17.1",
	"drf-spectacular==0.29.0",
	"ipython==9.14.0",
	"openai==2.38.0",
	"pillow==12.2.0",
	"psycopg2==2.9.12",
]

[project.optional-dependencies]
dev = [
	"black==26.5.1",
	"build<=1.5.0",
	"bumpver==2026.1132",
	"isort",
	"mypy",
	"pre-commit==4.6.0",
	"pyjwt==2.13.0",
	"pylint-django==2.7.0",
	"pylint-runner==0.7.0",
	"pytest-cov==7.1.0",
	"pytest-django==4.12.0",
	"pytest-icdiff==0.9",
	"pytest-xdist==3.8.0",
	"shellcheck-py==0.11.0.1",
	"sphinx==9.0.4",
	"sphinx-rtd-theme==3.1.0",
	"sphinx-last-updated-by-git==0.3.8",
	"sphinxcontrib-django==2.5",
	"twine==6.2.0",
	"wheel==0.47.0",
]
e2e = [
	"mkdocs>=1.5,<2.0",
	"mkdocs-material>=9.0,<10.0",
	"pytest-playwright",
	"pytest-xdist",
]

[project.urls]
"Homepage" = "https://lunes.app/"
"Source Code" = "https://github.com/digitalfabrik/lunes-cms"
"Issues" = "https://github.com/digitalfabrik/lunes-cms/issues"
"Release Notes" = "https://digitalfabrik.github.io/lunes-cms/release-notes.html"
"Documentation" = "https://digitalfabrik.github.io/lunes-cms/"

[tool.setuptools]
script-files = ["lunes_cms/lunes-cms-cli"]

[tool.setuptools.packages.find]
include = ["lunes_cms*"]

[tool.bumpver]
current_version = "2026.6.1"
version_pattern = "YYYY.MM.INC0[-TAG]"
commit_message = "Bump version to {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"lunes_cms/__init__.py" = [
    '__version__ = "{version}"',
]
"docs/src/conf.py" = [
    'release = "{version}"',
]

# Exclude e2e tests temporarily in pytest, will be removed in #747
[tool.pytest.ini_options]
addopts = "--ignore=e2e-tests"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.13"
exclude = [
    '^lunes_cms/cms/',
    '^tests/api/',
]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.black]
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
order_by_type = false