[metadata]
name = lunes-cms
version = 2024.5.0
author = Tür an Tür – Digitalfabrik gGmbH
author_email = tech@integreat-app.de
description = Content Management System for the Lunes Vocabulary Trainer App
url = https://lunes.app/
project_urls =
	Documentation=https://lunes-cms.rtfd.io
	Issues=https://github.com/digitalfabrik/lunes-cms/issues
	Source Code=https://github.com/digitalfabrik/lunes-cms
	Release Notes=https://digitalfabrik.github.io/integreat-cms/changelog.html
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
    NOTICE.md
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Framework :: Django
	Framework :: Django :: 3.2
	Operating System :: POSIX :: Linux
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
	Natural Language :: English
	Natural Language :: German
keywords =
	lunes
	cms
	django
	e-learning
	vocabulary
	trainer
	vocabulary-trainer
	visual-vocabulary-trainer

[options]
packages =
	lunes_cms
install_requires =
	django==3.2.21
	django-jazzmin==2.6.0
	django-mptt==0.15.0
	django-qr-code==3.1.1
	djangorestframework==3.14.0
	drf-spectacular==0.26.5
	ipython==8.16.0
	pillow==10.0.1
	psycopg2==2.9.8
	pydub==0.25.1
python_requires = >=3.8
include_package_data = True
scripts = lunes_cms/lunes-cms-cli

[options.extras_require]
dev =
	black==23.9.1
	bumpver==2023.1126
	pre-commit==3.4.0
	pyjwt==2.8.0
	pylint-django==2.5.3
	pylint-runner==0.6.0
	shellcheck-py==0.9.0.6
	twine==4.0.2
doc =
	sphinx==7.2.6
	sphinx-rtd-theme==1.3.0
	sphinx-last-updated-by-git==0.3.6
	sphinxcontrib-django==2.5
test =
	pytest-circleci-parallelized==0.1.0
	pytest-cov==4.1.0
	pytest-django==4.5.2
	pytest-icdiff==0.8
	pytest-xdist==3.3.1

[bumpver]
current_version = 2024.5.0
version_pattern = YYYY.MM.INC0[-TAG]
commit_message =
	Bump version to {new_version}
	[skip ci]
commit = True
tag = False
push = False

[bumpver:file_patterns]
setup.cfg = version = {version}
lunes_cms/__init__.py = __version__ = "{version}"
docs/src/conf.py = release = "{version}"
