[metadata]
name = lunes-cms
version = 2024.11.0
author = Tür an Tür – Digitalfabrik gGmbH
author_email = tech@integreat-app.de
description = Content Management System for the Lunes Vocabulary Trainer App
url = https://lunes.app/
project_urls =
	Documentation=https://lunes-cms.rtfd.io
	Issues=https://github.com/digitalfabrik/lunes-cms/issues
	Source Code=https://github.com/digitalfabrik/lunes-cms
	Release Notes=https://digitalfabrik.github.io/integreat-cms/changelog.html
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
    NOTICE.md
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Framework :: Django
	Framework :: Django :: 5.1
	Operating System :: POSIX :: Linux
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
	Natural Language :: English
	Natural Language :: German
keywords =
	lunes
	cms
	django
	e-learning
	vocabulary
	trainer
	vocabulary-trainer
	visual-vocabulary-trainer

[options]
packages =
	lunes_cms
install_requires =
	django==5.1.2
	django-import-export==4.3.1
	django-jazzmin==3.0.1
	django-mptt==0.16.0
	django-qr-code==4.1.0
	djangorestframework==3.15.2
	drf-spectacular==0.28.0
	ipython==8.30.0
	pillow==11.0.0
	psycopg2==2.9.10
	pydub==0.25.1
python_requires = >=3.8
include_package_data = True
scripts = lunes_cms/lunes-cms-cli

[options.extras_require]
dev =
	black==24.10.0
	bumpver==2024.1130
	pre-commit==4.0.1
	pyjwt==2.10.1
	pylint-django==2.6.1
	pylint-runner==0.7.0
	shellcheck-py==0.10.0.1
	twine==6.0.1
doc =
	sphinx==8.1.3
	sphinx-rtd-theme==3.0.2
	sphinx-last-updated-by-git==0.3.8
	sphinxcontrib-django==2.5
test =
	pytest-circleci-parallelized==0.1.0
	pytest-cov==6.0.0
	pytest-django==4.9.0
	pytest-icdiff==0.9
	pytest-xdist==3.6.1

[bumpver]
current_version = 2024.11.0
version_pattern = YYYY.MM.INC0[-TAG]
commit_message =
	Bump version to {new_version}
	[skip ci]
commit = True
tag = False
push = False

[bumpver:file_patterns]
setup.cfg = version = {version}
lunes_cms/__init__.py = __version__ = "{version}"
docs/src/conf.py = release = "{version}"
